# simple_server_client

./: docker-compose.yml
client/: CMakeLists.txt  Dockerfile  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  Dockerfile  Makefile  main.cpp
